--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,10 @@ jobs:
         run: |
           set -euo pipefail
 
-          mapfile -t XCODE_APPS < <(find /Applications -maxdepth 1 -type d -name "Xcode*.app" | sort)
+          XCODE_APPS=()
+          while IFS= read -r app; do
+            XCODE_APPS+=("$app")
+          done < <(find /Applications -maxdepth 1 -type d -name "Xcode*.app" | sort)
 
           if [[ "${#XCODE_APPS[@]}" -eq 0 ]]; then
             echo "No Xcode installations found in /Applications."
