--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: macos-14
     env:
       APP_PATH: build/Build/Products/Release/claudiable_status.app
+      DMG_PATH: dist/claudiable_status.dmg
 
     steps:
       - name: Checkout
@@ -175,6 +176,66 @@ jobs:
           xcrun stapler staple "$APP_PATH"
           xcrun stapler validate "$APP_PATH"
 
+      - name: Create DMG
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          mkdir -p dist
+          rm -f "$DMG_PATH"
+
+          STAGE_DIR="$RUNNER_TEMP/dmg-root"
+          rm -rf "$STAGE_DIR"
+          mkdir -p "$STAGE_DIR"
+
+          cp -R "$APP_PATH" "$STAGE_DIR/"
+          ln -s /Applications "$STAGE_DIR/Applications"
+
+          hdiutil create \
+            -volname "claudiable_status" \
+            -srcfolder "$STAGE_DIR" \
+            -ov \
+            -format UDZO \
+            "$DMG_PATH"
+
+      - name: Codesign DMG
+        if: ${{ secrets.MACOS_CERT_P12_BASE64 != '' && secrets.MACOS_CERT_PASSWORD != '' }}
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          SIGN_IDENTITY="$(security find-identity -v -p codesigning "$KEYCHAIN_PATH" | awk -F'"' '/Developer ID Application/ {print $2; exit}')"
+          if [[ -z "$SIGN_IDENTITY" ]]; then
+            echo "Developer ID Application identity not found in keychain."
+            exit 1
+          fi
+
+          codesign --force --timestamp --sign "$SIGN_IDENTITY" "$DMG_PATH"
+          codesign --verify --verbose=2 "$DMG_PATH"
+
+      - name: Notarize and staple DMG
+        if: ${{ secrets.MACOS_CERT_P12_BASE64 != '' && secrets.MACOS_CERT_PASSWORD != '' && secrets.APPLE_API_KEY_ID != '' && secrets.APPLE_API_ISSUER_ID != '' && secrets.APPLE_API_PRIVATE_KEY_BASE64 != '' }}
+        shell: bash
+        env:
+          APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
+          APPLE_API_ISSUER_ID: ${{ secrets.APPLE_API_ISSUER_ID }}
+          APPLE_API_PRIVATE_KEY_BASE64: ${{ secrets.APPLE_API_PRIVATE_KEY_BASE64 }}
+        run: |
+          set -euo pipefail
+
+          KEY_PATH="$RUNNER_TEMP/AuthKey_${APPLE_API_KEY_ID}.p8"
+
+          echo "$APPLE_API_PRIVATE_KEY_BASE64" | base64 --decode > "$KEY_PATH"
+
+          xcrun notarytool submit "$DMG_PATH" \
+            --key "$KEY_PATH" \
+            --key-id "$APPLE_API_KEY_ID" \
+            --issuer "$APPLE_API_ISSUER_ID" \
+            --wait
+
+          xcrun stapler staple "$DMG_PATH"
+          xcrun stapler validate "$DMG_PATH"
+
       - name: Prepare Homebrew assets
         shell: bash
         run: |
@@ -186,12 +247,15 @@ jobs:
 
           cp dist/claudiable-status.rb dist/claudiable-status-cask.rb
           shasum -a 256 dist/claudiable_status.zip > dist/claudiable_status.zip.sha256
+          shasum -a 256 "$DMG_PATH" > dist/claudiable_status.dmg.sha256
 
       - name: Upload release assets
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.meta.outputs.tag }}
           files: |
+            dist/claudiable_status.dmg
+            dist/claudiable_status.dmg.sha256
             dist/claudiable_status.zip
             dist/claudiable_status.zip.sha256
             dist/claudiable-status-cask.rb
