Refactor macOS release workflow
Restructure and harden the GitHub Actions macOS release workflow. Extracts version/tag earlier as step outputs, adds DIST_DIR and exposes Apple signing/notary secrets as env vars, and introduces HAS_SIGNING/HAS_NOTARY detection so signing/notarization steps are optional. Reworks Xcode selection to scan /Applications and pick the highest Xcode 16+ by major/minor version, simplifies failure output, and prints xcodebuild version. Use macOS-compatible base64 (-D), fix keychain list invocation, quote paths, and replace hardcoded dist paths with DIST_DIR for packaging and checksum steps. Miscellaneous message/text tweaks and minor safety improvements.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,63 +19,17 @@ jobs:
     runs-on: macos-14
     env:
       APP_PATH: build/Build/Products/Release/claudiable_status.app
+      DIST_DIR: dist
       DMG_PATH: dist/claudiable_status.dmg
+      MACOS_CERT_P12_BASE64: ${{ secrets.MACOS_CERT_P12_BASE64 }}
+      MACOS_CERT_PASSWORD: ${{ secrets.MACOS_CERT_PASSWORD }}
+      APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
+      APPLE_API_ISSUER_ID: ${{ secrets.APPLE_API_ISSUER_ID }}
+      APPLE_API_PRIVATE_KEY_BASE64: ${{ secrets.APPLE_API_PRIVATE_KEY_BASE64 }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Select compatible Xcode
-        shell: bash
-        run: |
-          set -euo pipefail
-
-          XCODE_APPS=()
-          while IFS= read -r app; do
-            XCODE_APPS+=("$app")
-          done < <(find /Applications -maxdepth 1 -type d -name "Xcode*.app" | sort)
-
-          if [[ "${#XCODE_APPS[@]}" -eq 0 ]]; then
-            echo "No Xcode installations found in /Applications."
-            exit 1
-          fi
-
-          BEST_APP=""
-          BEST_VERSION=""
-
-          for app in "${XCODE_APPS[@]}"; do
-            XCBUILD="${app}/Contents/Developer/usr/bin/xcodebuild"
-            if [[ ! -x "$XCBUILD" ]]; then
-              continue
-            fi
-
-            VERSION="$("$XCBUILD" -version | awk 'NR==1 {print $2}')"
-            if [[ -z "$VERSION" ]]; then
-              continue
-            fi
-
-            MAJOR="${VERSION%%.*}"
-            if [[ "$MAJOR" -ge 16 ]]; then
-              if [[ -z "$BEST_VERSION" ]] || [[ "$(printf '%s\n%s\n' "$BEST_VERSION" "$VERSION" | sort -V | tail -n1)" == "$VERSION" ]]; then
-                BEST_APP="$app"
-                BEST_VERSION="$VERSION"
-              fi
-            fi
-          done
-
-          if [[ -z "$BEST_APP" ]]; then
-            echo "No Xcode 16+ installation found. Installed Xcodes:"
-            for app in "${XCODE_APPS[@]}"; do
-              XCBUILD="${app}/Contents/Developer/usr/bin/xcodebuild"
-              if [[ -x "$XCBUILD" ]]; then
-                echo "  - $("$XCBUILD" -version | head -n1) ($app)"
-              fi
-            done
-            exit 1
-          fi
-
-          sudo xcode-select -s "${BEST_APP}/Contents/Developer"
-          echo "Selected Xcode: $(xcodebuild -version | head -n1)"
 
       - name: Resolve version and tag
         id: meta
@@ -94,12 +48,73 @@ jobs:
           echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
           echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
 
-      - name: Configure signing keychain
-        if: ${{ secrets.MACOS_CERT_P12_BASE64 != '' && secrets.MACOS_CERT_PASSWORD != '' }}
+      - name: Select compatible Xcode
         shell: bash
-        env:
-          MACOS_CERT_P12_BASE64: ${{ secrets.MACOS_CERT_P12_BASE64 }}
-          MACOS_CERT_PASSWORD: ${{ secrets.MACOS_CERT_PASSWORD }}
+        run: |
+          set -euo pipefail
+
+          BEST_APP=""
+          BEST_MAJOR=0
+          BEST_MINOR=0
+
+          for app in /Applications/Xcode*.app; do
+            [[ -d "$app" ]] || continue
+            XCBUILD="$app/Contents/Developer/usr/bin/xcodebuild"
+            [[ -x "$XCBUILD" ]] || continue
+
+            VERSION="$("$XCBUILD" -version | awk 'NR==1 {print $2}')"
+            [[ -n "$VERSION" ]] || continue
+
+            MAJOR="${VERSION%%.*}"
+            REST="${VERSION#*.}"
+            if [[ "$REST" == "$VERSION" ]]; then
+              MINOR=0
+            else
+              MINOR="${REST%%.*}"
+            fi
+
+            if [[ "$MAJOR" -ge 16 ]]; then
+              if [[ "$MAJOR" -gt "$BEST_MAJOR" ]] || [[ "$MAJOR" -eq "$BEST_MAJOR" && "$MINOR" -gt "$BEST_MINOR" ]]; then
+                BEST_APP="$app"
+                BEST_MAJOR="$MAJOR"
+                BEST_MINOR="$MINOR"
+              fi
+            fi
+          done
+
+          if [[ -z "$BEST_APP" ]]; then
+            echo "No Xcode 16+ installation found in /Applications."
+            ls -1 /Applications | grep '^Xcode' || true
+            exit 1
+          fi
+
+          sudo xcode-select -s "$BEST_APP/Contents/Developer"
+          xcodebuild -version
+
+      - name: Detect signing/notarization availability
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          HAS_SIGNING=false
+          HAS_NOTARY=false
+
+          if [[ -n "${MACOS_CERT_P12_BASE64}" && -n "${MACOS_CERT_PASSWORD}" ]]; then
+            HAS_SIGNING=true
+          fi
+
+          if [[ "$HAS_SIGNING" == "true" && -n "${APPLE_API_KEY_ID}" && -n "${APPLE_API_ISSUER_ID}" && -n "${APPLE_API_PRIVATE_KEY_BASE64}" ]]; then
+            HAS_NOTARY=true
+          fi
+
+          echo "HAS_SIGNING=${HAS_SIGNING}" >> "$GITHUB_ENV"
+          echo "HAS_NOTARY=${HAS_NOTARY}" >> "$GITHUB_ENV"
+          echo "Signing enabled: ${HAS_SIGNING}"
+          echo "Notarization enabled: ${HAS_NOTARY}"
+
+      - name: Configure signing keychain
+        if: ${{ env.HAS_SIGNING == 'true' }}
+        shell: bash
         run: |
           set -euo pipefail
 
@@ -107,12 +122,12 @@ jobs:
           KEYCHAIN_PASSWORD="$(openssl rand -hex 24)"
           CERT_PATH="$RUNNER_TEMP/certificate.p12"
 
-          echo "$MACOS_CERT_P12_BASE64" | base64 --decode > "$CERT_PATH"
+          echo "$MACOS_CERT_P12_BASE64" | base64 -D > "$CERT_PATH"
 
           security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-          security list-keychains -d user -s "$KEYCHAIN_PATH" $(security list-keychains -d user | tr -d '"')
+          security list-keychains -d user -s "$KEYCHAIN_PATH"
 
           security import "$CERT_PATH" \
             -k "$KEYCHAIN_PATH" \
@@ -136,35 +151,30 @@ jobs:
             CODE_SIGNING_ALLOWED=NO
 
       - name: Codesign app bundle
-        if: ${{ secrets.MACOS_CERT_P12_BASE64 != '' && secrets.MACOS_CERT_PASSWORD != '' }}
+        if: ${{ env.HAS_SIGNING == 'true' }}
         shell: bash
         run: |
           set -euo pipefail
 
           SIGN_IDENTITY="$(security find-identity -v -p codesigning "$KEYCHAIN_PATH" | awk -F'"' '/Developer ID Application/ {print $2; exit}')"
           if [[ -z "$SIGN_IDENTITY" ]]; then
-            echo "Developer ID Application identity not found in keychain."
+            echo "Developer ID Application identity not found."
             exit 1
           fi
 
           codesign --force --deep --options runtime --timestamp --sign "$SIGN_IDENTITY" "$APP_PATH"
           codesign --verify --deep --strict --verbose=2 "$APP_PATH"
-          spctl --assess --type execute --verbose=4 "$APP_PATH" || true
 
       - name: Notarize and staple app
-        if: ${{ secrets.MACOS_CERT_P12_BASE64 != '' && secrets.MACOS_CERT_PASSWORD != '' && secrets.APPLE_API_KEY_ID != '' && secrets.APPLE_API_ISSUER_ID != '' && secrets.APPLE_API_PRIVATE_KEY_BASE64 != '' }}
+        if: ${{ env.HAS_NOTARY == 'true' }}
         shell: bash
-        env:
-          APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
-          APPLE_API_ISSUER_ID: ${{ secrets.APPLE_API_ISSUER_ID }}
-          APPLE_API_PRIVATE_KEY_BASE64: ${{ secrets.APPLE_API_PRIVATE_KEY_BASE64 }}
         run: |
           set -euo pipefail
 
           KEY_PATH="$RUNNER_TEMP/AuthKey_${APPLE_API_KEY_ID}.p8"
           NOTARY_ZIP="$RUNNER_TEMP/claudiable_status-notary.zip"
 
-          echo "$APPLE_API_PRIVATE_KEY_BASE64" | base64 --decode > "$KEY_PATH"
+          echo "$APPLE_API_PRIVATE_KEY_BASE64" | base64 -D > "$KEY_PATH"
           ditto -c -k --sequesterRsrc --keepParent "$APP_PATH" "$NOTARY_ZIP"
 
           xcrun notarytool submit "$NOTARY_ZIP" \
@@ -181,7 +191,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          mkdir -p dist
+          mkdir -p "$DIST_DIR"
           rm -f "$DMG_PATH"
 
           STAGE_DIR="$RUNNER_TEMP/dmg-root"
@@ -199,14 +209,14 @@ jobs:
             "$DMG_PATH"
 
       - name: Codesign DMG
-        if: ${{ secrets.MACOS_CERT_P12_BASE64 != '' && secrets.MACOS_CERT_PASSWORD != '' }}
+        if: ${{ env.HAS_SIGNING == 'true' }}
         shell: bash
         run: |
           set -euo pipefail
 
           SIGN_IDENTITY="$(security find-identity -v -p codesigning "$KEYCHAIN_PATH" | awk -F'"' '/Developer ID Application/ {print $2; exit}')"
           if [[ -z "$SIGN_IDENTITY" ]]; then
-            echo "Developer ID Application identity not found in keychain."
+            echo "Developer ID Application identity not found."
             exit 1
           fi
 
@@ -214,18 +224,13 @@ jobs:
           codesign --verify --verbose=2 "$DMG_PATH"
 
       - name: Notarize and staple DMG
-        if: ${{ secrets.MACOS_CERT_P12_BASE64 != '' && secrets.MACOS_CERT_PASSWORD != '' && secrets.APPLE_API_KEY_ID != '' && secrets.APPLE_API_ISSUER_ID != '' && secrets.APPLE_API_PRIVATE_KEY_BASE64 != '' }}
+        if: ${{ env.HAS_NOTARY == 'true' }}
         shell: bash
-        env:
-          APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
-          APPLE_API_ISSUER_ID: ${{ secrets.APPLE_API_ISSUER_ID }}
-          APPLE_API_PRIVATE_KEY_BASE64: ${{ secrets.APPLE_API_PRIVATE_KEY_BASE64 }}
         run: |
           set -euo pipefail
 
           KEY_PATH="$RUNNER_TEMP/AuthKey_${APPLE_API_KEY_ID}.p8"
-
-          echo "$APPLE_API_PRIVATE_KEY_BASE64" | base64 --decode > "$KEY_PATH"
+          echo "$APPLE_API_PRIVATE_KEY_BASE64" | base64 -D > "$KEY_PATH"
 
           xcrun notarytool submit "$DMG_PATH" \
             --key "$KEY_PATH" \
@@ -242,12 +247,12 @@ jobs:
           set -euo pipefail
           chmod +x scripts/prepare_homebrew_release.sh
           APP_BUNDLE_PATH="$APP_PATH" \
-          DIST_DIR="dist" \
+          DIST_DIR="$DIST_DIR" \
           scripts/prepare_homebrew_release.sh "${{ steps.meta.outputs.version }}" "${{ github.repository_owner }}" "${{ github.event.repository.name }}"
 
-          cp dist/claudiable-status.rb dist/claudiable-status-cask.rb
-          shasum -a 256 dist/claudiable_status.zip > dist/claudiable_status.zip.sha256
-          shasum -a 256 "$DMG_PATH" > dist/claudiable_status.dmg.sha256
+          cp "$DIST_DIR/claudiable-status.rb" "$DIST_DIR/claudiable-status-cask.rb"
+          shasum -a 256 "$DIST_DIR/claudiable_status.zip" > "$DIST_DIR/claudiable_status.zip.sha256"
+          shasum -a 256 "$DMG_PATH" > "$DIST_DIR/claudiable_status.dmg.sha256"
 
       - name: Upload release assets
         uses: softprops/action-gh-release@v2
